--- a/cadastro-professor.html
+++ b/cadastro-professor.html
@@ -21,7 +21,7 @@
             <div class="menu">
                 <a href="index.html">HOME</a>
                 <a href="cadastro.html" class="selecionado">CADASTRO</a>
-                <a href="#">LOGIN</a>
+                <a href="login.html">LOGIN</a>
                 <a href="#">SOBRE</a>
             </div>
         </div>
