--- a/cadastro.html
+++ b/cadastro.html
@@ -19,8 +19,8 @@
             <div class="logo"> <img src="imagens/rural_logo.png" height="85"> </div>
             <div class="menu">
                 <a href="index.html">HOME</a>
-                <a href="#" class="selecionado">CADASTRO</a>
-                <a href="#">LOGIN</a>
+                <a href="cadastro.html" class="selecionado">CADASTRO</a>
+                <a href="login.html">LOGIN</a>
                 <a href="#">SOBRE</a>
             </div>
         </div>
