Páginas de Sobre, Atualizar Dados

--- a/cadastro-professor.html
+++ b/cadastro-professor.html
@@ -22,7 +22,7 @@
                 <a href="index.html">HOME</a>
                 <a href="cadastro.html" class="selecionado">CADASTRO</a>
                 <a href="login.html">LOGIN</a>
-                <a href="#">SOBRE</a>
+                <a href="sobre.html">SOBRE</a>
             </div>
         </div>
     </header>
