--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="index.html" class="selecionado">HOME</a>
                 <a href="cadastro.html">CADASTRO</a>
                 <a href="login.html">LOGIN</a>
-                <a href="#">SOBRE</a>
+                <a href="sobre.html">SOBRE</a>
             </div>
         </div>
     </header>
@@ -30,7 +30,7 @@
         <div class="welcome-text">
             <h1>Quer fazer parte de um projeto de extensão da UFRRJ?</h1>
             <a href="cadastro-aluno.html" class="botao-verde">CADASTRE-SE</a>
-            <p>Ou <a href="login.html">faça login</a></p>
+            <p>Ou <a href="">faça login</a></p>
         </div>
 
         <div class="welcome-vector">
@@ -135,7 +135,7 @@
                 <h1>Você é responsável por algum projeto de extensão?</h1>
                 <div class="prof-botoes">
                     <a href="" class="botao-azul">ENTRE</a>
-                    <p>Ou <a href="cadastro-professor.html">cadastre-se</a></p>
+                    <p>Ou <a href="cadastro-prof.html">cadastre-se</a></p>
                 </div>
             </div>
         </div>
@@ -192,7 +192,7 @@
 
             <div class="coord-text">
                 <h1>Você faz parte da coordenação de algum dos cursos da UFRRJ?</h1>
-                <a href="login.html" class="botao-amarelo">ENTRE</a>
+                <a href="" class="botao-amarelo">ENTRE</a>
             </div>
         </div>
     </section>
