--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                 <a href="index.html">HOME</a>
                 <a href="cadastro.html">CADASTRO</a>
                 <a href="login.html" class="selecionado">LOGIN</a>
-                <a href="#">SOBRE</a>
+                <a href="sobre.html">SOBRE</a>
             </div>
         </div>
     </header>
