--- a/aluno-perfil-comprojeto.html
+++ b/aluno-perfil-comprojeto.html
@@ -19,7 +19,7 @@
                         <a href="#" class="selecionado">PERFIL</a>
                         <ul>
                             <li><a class="navitem" href="#">Editar perfil</a></li>
-                            <li><a class="navitem" href="#">Atualizar dados</a></li>
+                            <li><a class="navitem" href="atualizar-dados-comprojeto.html">Atualizar dados</a></li>
                         </ul>
                     </div>    
                     <div class="perfil">
