--- a/conf-envio-relatorio.html
+++ b/conf-envio-relatorio.html
@@ -17,7 +17,7 @@
                         <a href="#" class="selecionado">PERFIL</a>
                         <ul>
                             <li><a class="navitem" href="#">Editar perfil</a></li>
-                            <li><a class="navitem" href="#">Atualizar dados</a></li>
+                            <li><a class="navitem" href="atualizar-dados-comprojeto.html">Atualizar dados</a></li>
                         </ul>
                     </div>    
                     <div class="perfil">
@@ -28,7 +28,7 @@
                         <li ><a class="navitem" href="historico-de-horas.html">Ver historico</a></li>
                         <li ><a class="navitem" href="incluir-cert.html">Incluir certificado de participação</a></li>
                         <li ><a class="navitem" href="contrato.html">Renovar contrato</a></li>
-                        <li><a class="navitem" href="#">buscar projetos</a></li>
+                        <li><a class="navitem" href="buscar-projetos-comprojeto.html">buscar projetos</a></li>
                     </ul>
                     </div>
                     <div class="perfil">
