Correção de umas coisas na página Sobre

--- a/atualizar-dados-semprojeto.html
+++ b/atualizar-dados-semprojeto.html
@@ -21,7 +21,7 @@
                     <div class="perfil">
                         <a href="#" class="selecionado">PERFIL</a>
                         <ul>
-                            <li><a class="navitem" href="#">Editar perfil</a></li>
+
                             <li><a class="navitem" href="#">Atualizar dados</a></li>
                         </ul>
                     </div>    
@@ -101,7 +101,12 @@
                             </select>    
                         </div>                 
                     </div>
-
+                    <div class="coluna-2">
+                        <div class="linha-3">
+                            <label for="foto">Adicione uma foto sua</label>
+                            <input multiple type="file" name="foto" id="foto">
+                        </div>
+                    </div>
                         
                 </div>
 
