--- a/atualizar-dados-comprojeto.html
+++ b/atualizar-dados-comprojeto.html
@@ -21,7 +21,6 @@
                     <div class="perfil">
                         <a href="#" class="selecionado">PERFIL</a>
                         <ul>
-                            <li><a class="navitem" href="#">Editar perfil</a></li>
                             <li><a class="navitem" href="#">Atualizar dados</a></li>
                         </ul>
                     </div>    
@@ -100,6 +99,12 @@
                                 <option value="39">SISTEMAS DE INFORMAÇÃO - 39</option>
                             </select>    
                         </div>                 
+                    </div>
+                    <div class="coluna-2">
+                        <div class="linha-3">
+                            <label for="foto">Adicione uma foto sua</label>
+                            <input multiple type="file" name="foto" id="foto">
+                        </div>
                     </div>
 
                         
