--- a/conf-envio-recurso.html
+++ b/conf-envio-recurso.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Enviar Relatório | Projeto Web 0</title>
+        <title>Enviar Recurso | Projeto Web 0</title>
         <link href="css/solicitacao.css" rel="stylesheet"/>
         <link rel="stylesheet" href="css/common.css">
 
@@ -39,7 +39,7 @@
                         </svg>
                     </a>
                     <ul>
-                        <li ><a class="navitem" href="resposta-relatorio-negado.html">relatório:atualização</a></li>
+
                     </ul>
                     </div>   
                 </div>
@@ -47,14 +47,14 @@
         </header>
         <div class="content">
             <section class="title">
-            <h1>RELATÓRIO ENVIADO</h1>
+            <h1>REQUERIMENTO ENVIADO</h1>
             <p>Referente ao projeto: <strong>Projeto Tal Que Faz Tal Coisa</strong></p>
             <p>Referente ao mês: <strong>Abril 2022</strong></p>
         </section>
 
         <section>
             <div class="conf">
-                <p class="texto">Seu relatório foi registrado e enviado a PROF. BELTRANO com sucesso. Atualizações referentes a este envio chegarão no seu e-mail e na sua aba de notificações.</p>
+                <p class="texto">Sua requerimento de recurso foi registrado e enviado a PROF. BELTRANO com sucesso. Atualizações referentes a este requerimento chegarão no seu e-mail e na sua aba de notificações.</p>
             </div>
 
             <div class="botao-vector">
