--- a/conf-solicitaçao-de-renovaçao.html
+++ b/conf-solicitaçao-de-renovaçao.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Enviar Relatório | Projeto Web 0</title>
+        <title>Enviar Solicitação  | Projeto Web 0</title>
         <link href="css/solicitacao.css" rel="stylesheet"/>
         <link rel="stylesheet" href="css/common.css">
 
@@ -47,14 +47,13 @@
         </header>
         <div class="content">
             <section class="title">
-            <h1>RELATÓRIO ENVIADO</h1>
-            <p>Referente ao projeto: <strong>Projeto Tal Que Faz Tal Coisa</strong></p>
-            <p>Referente ao mês: <strong>Abril 2022</strong></p>
+            <h1>SOLICITAÇÃO ENVIADA</h1>
+           
         </section>
 
         <section>
             <div class="conf">
-                <p class="texto">Seu relatório foi registrado e enviado a PROF. BELTRANO com sucesso. Atualizações referentes a este envio chegarão no seu e-mail e na sua aba de notificações.</p>
+                <p class="texto">Sua solicitação de renovação de contrato foi enviada a PROF. BELTRANO com sucesso. Atualizações referentes a esta solicitação chegarão no seu e-mail e na sua aba de notificações.</p>
             </div>
 
             <div class="botao-vector">
