--- a/relatorio-aprovado.html
+++ b/relatorio-aprovado.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <title>Encerrar Vínculo | Projeto Web 0</title>
-        <link href="css/solicitacao.css" rel="stylesheet"/>
+        <title>Resposta Relatório | Projeto Web 0</title>
+        <link href="css/relatorio-aprovado.css" rel="stylesheet"/>
         <link rel="stylesheet" href="css/common.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,15 +47,24 @@
         </header>
         <div class="content">
             <section class="title">
-            <h1>SOLICITAR ENCERRAMENTO DE VÍNCULO</h1>
+            <h1>RESPOSTA SOBRE RELATORIO</h1>
             <p>Referente ao projeto: <strong>Projeto Tal Que Faz Tal Coisa</strong></p>
+
+            <div class="select-mes">
+                <p>Referente ao mês: março</p>
+                
+            </div>
         </section>
 
         <section class="justificativa">
-            <p>Justifique ao professor responsável o motivo de seu pedido de encerramento de vínculo.</p>
-            <textarea name="justificativa" id="justificativa" cols="120" rows="15"></textarea>
+            <p>Resposta:</p>
+            <div class="resposta">
+                <p>
+                    O seu relatório foi devidamente aprovado pela coordenação, as horas provenientes do mesmo já estão contabilizadas em seu histórico
+                </p>
+            </div>
 
-            <a class="botao-verde" href="conf-enc-vinculo.html">ENVIAR</a>
+            <a class="botao-verde" href="aluno-perfil-comprojeto.html">RETORNAR AO PERFIL</a>
         </section>
         </div>
         
