--- a/aluno-perfil-comprojeto.html
+++ b/aluno-perfil-comprojeto.html
@@ -29,7 +29,7 @@
                         <li ><a class="navitem" href="historico-de-horas.html">Ver historico</a></li>
                         <li ><a class="navitem" href="incluir-cert.html">Incluir certificado de participação</a></li>
                         <li ><a class="navitem" href="contrato.html">Renovar contrato</a></li>
-                        <li><a class="navitem" href="#">buscar projetos</a></li>
+                        <li><a class="navitem" href="buscar-projetos-comprojeto.html">buscar projetos</a></li>
                     </ul>
                     </div>
                     <div class="perfil">
@@ -40,7 +40,7 @@
                         </svg>
                     </a>
                     <ul>
-                        <li ><a class="navitem" href="#">recurso:atualização</a></li>
+                        <li ><a class="navitem" href="resposta-relatorio-negado.html">relatório:atualização</a></li>
 
                     </ul>
                     </div>   
@@ -83,7 +83,7 @@
                         <div class="div-porcent-horas">
 
                         </div>
-                        <a class="botao-azul historico" href="#">VER HISTÓRICO</a>
+                        <a class="botao-azul historico" href="historico-de-horas.html">VER HISTÓRICO</a>
                     </div>
                 </div>
 
