--- a/cadastro-professor.html
+++ b/cadastro-professor.html
@@ -21,8 +21,8 @@
             <div class="menu">
                 <a href="index.html">HOME</a>
                 <a href="cadastro.html" class="selecionado">CADASTRO</a>
-                <a href="login.html">LOGIN</a>
-                <a href="sobre.html">SOBRE</a>
+                <a href="#">LOGIN</a>
+                <a href="#">SOBRE</a>
             </div>
         </div>
     </header>
