--- a/conf-enc-vinculo.html
+++ b/conf-enc-vinculo.html
@@ -39,7 +39,7 @@
                         </svg>
                     </a>
                     <ul>
-                        <li ><a class="navitem" href="#">recurso:atualização</a></li>
+                        <li ><a class="navitem" href="resposta-relatorio-negado.html">relatório:atualização</a></li>
                     </ul>
                     </div>   
                 </div>
