--- a/contrato.html
+++ b/contrato.html
@@ -39,7 +39,7 @@
                         </svg>
                     </a>
                     <ul>
-                        <li ><a class="navitem" href="#">recurso:atualização</a></li>
+                        <li ><a class="navitem" href="resposta-relatorio-negado.html">relatório:atualização</a></li>
                     </ul>
                     </div>   
                 </div>
@@ -117,7 +117,7 @@
             </div>
             
             <div class="botoes">
-                <a class="botao-verde" href="#">SOLICITAR RENOVAÇÃO</a>
+                <a class="botao-verde" href="conf-solicitaçao-de-renovaçao.html">SOLICITAR RENOVAÇÃO</a>
                 <a class="botao-vermelho" href="encerrar-vinculo.html">ENCERRAR VÍNCULO</a>    
             </div>
             
