--- a/enviar-recurso.html
+++ b/enviar-recurso.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <title>Encerrar Vínculo | Projeto Web 0</title>
-        <link href="css/solicitacao.css" rel="stylesheet"/>
+        <title>Enviar Relatório | Projeto Web 0</title>
+        <link href="css/enviar-recurso.css" rel="stylesheet"/>
         <link rel="stylesheet" href="css/common.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
                         </svg>
                     </a>
                     <ul>
-                        <li ><a class="navitem" href="resposta-relatorio-negado.html">relatório:atualização</a></li>
+
                     </ul>
                     </div>   
                 </div>
@@ -47,15 +47,20 @@
         </header>
         <div class="content">
             <section class="title">
-            <h1>SOLICITAR ENCERRAMENTO DE VÍNCULO</h1>
+            <h1>ENVIANDO RECURSO</h1>
             <p>Referente ao projeto: <strong>Projeto Tal Que Faz Tal Coisa</strong></p>
+
+            <div class="select-mes">
+                <p>Referente ao mês: março </p>
+                
+            </div>
         </section>
 
         <section class="justificativa">
-            <p>Justifique ao professor responsável o motivo de seu pedido de encerramento de vínculo.</p>
-            <textarea name="justificativa" id="justificativa" cols="120" rows="15"></textarea>
+            <p>Justificativa de requerimento:</p>
+            <textarea name="relatorio" id="relatorio" cols="120" rows="15"></textarea>
 
-            <a class="botao-verde" href="conf-enc-vinculo.html">ENVIAR</a>
+            <a class="botao-verde" href="conf-envio-recurso.html">ENVIAR</a>
         </section>
         </div>
         
