--- a/historico-de-horas.html
+++ b/historico-de-horas.html
@@ -41,7 +41,7 @@
                         </svg>
                     </a>
                     <ul>
-                        <li ><a class="navitem" href="#">recurso:atualização</a></li>
+                        <li ><a class="navitem" href="resposta-relatorio-negado.html">relatório:atualização</a></li>
                     </ul>
                     </div>   
                 </div>
@@ -83,12 +83,12 @@
                         <li class="tiratop"><br>retorno da coord.</li>
                         <li><br>-</li>
                         <li><br>-</li>
-                        <li><br><a href="#">visualizar</a></li>
-                        <li><br><a href="#">visualizar</a></li>
+                        <li><br><a href="relatorio-aprovado.html">visualizar</a></li>
+                        <li><br><a href="resposta-relatorio-negado.html">visualizar</a></li>
                     </ul>                   
                 </div>
-            <p id="esquerda"><strong>horas a cumprir</strong>: ---</p>
-            <p id="direita"><strong>horas restantes</strong>: ---</p>    
+            <p id="esquerda"><strong>TOTAL DE HORAS:</strong>: 20h</p>
+            <p id="direita"><strong>HORAS RESTANTES:</strong>: 3040h</p>    
             </div>
         </section>
             <section class="footer">
