Adição de um botão home no dropdown.

--- a/aluno-perfil-semprojeto.html
+++ b/aluno-perfil-semprojeto.html
@@ -23,6 +23,7 @@
                     <div class="perfil">
                     <a href="#" class="selecionado">SEU PROJETO</a>
                     <ul>
+                        <li><a class="navitem" href="aluno-perfil-semprojeto.html">pagina inicial</a></li>
                         <li ><a class="navitem" href="#">Enviar relatório</a></li>
                         <li ><a class="navitem" href="#">Solicitar encerramento de vínculo</a></li>
                         <li ><a class="navitem" href="#">Ver historico</a></li>
@@ -58,7 +59,7 @@
                         </div>
 
                         <div class="procurar-projetos">
-                            <a class="botao-verde" href="#">PROCURAR PROJETOS</a>
+                            <a class="botao-verde" href="buscar-projetos-semprojeto.html">PROCURAR PROJETOS</a>
                         </div>
                         
                     </div>
