Adição de um botão home no dropdown.

--- a/buscar-projetos-comprojeto.html
+++ b/buscar-projetos-comprojeto.html
@@ -25,6 +25,7 @@
                     <div class="perfil">
                     <a href="#" class="selecionado">SEU PROJETO</a>
                     <ul>
+                        <li><a class="navitem" href="aluno-perfil-comprojeto.html">pagina inicial</a></li>
                         <li ><a class="navitem" href="enviar-relatorio.html">Enviar relatório</a></li>
                         <li ><a class="navitem" href="encerrar-vinculo.html">Solicitar encerramento de vínculo</a></li>
                         <li ><a class="navitem" href="historico-de-horas.html">Ver historico</a></li>
@@ -68,21 +69,21 @@
                         
                     <div class="projeto">
                         <p class="prof">Prof. BELTRANO</p>
-                        <a href="visualizar-projeto-semprojeto.html" class="titulo-proj">PROJETO TAL QUE FAZ TAL COISAS</a>
+                        <a href="visualizar-projeto-comprojeto.html" class="titulo-proj">PROJETO TAL QUE FAZ TAL COISAS</a>
                         <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore atque voluptatum expedita id natus aliquid. Voluptates ratione quod aspernatur repellat, harum magnam ex recusandae deleniti rem distinctio commodi expedita cum?</p>
                         <p class="vagas">VAGAS: 5</p>
                     </div>
                     <hr>
                     <div class="projeto">
                         <p class="prof">Prof. BELTRANA</p>
-                        <a href="visualizar-projeto-semprojeto.html" class="titulo-proj">PROJETO TAL QUE FAZ OUTRA</a>
+                        <a href="visualizar-projeto-comprojeto.html" class="titulo-proj">PROJETO TAL QUE FAZ OUTRA</a>
                         <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore atque voluptatum expedita id natus aliquid. Voluptates ratione quod aspernatur repellat, harum magnam ex recusandae deleniti rem distinctio commodi expedita cum?</p>
                         <p class="vagas">VAGAS: 5</p>
                     </div>
                     <hr>
                     <div class="projeto">
                         <p class="prof">Prof. CICLANO</p>
-                        <a href="visualizar-projeto-semprojeto.html" class="titulo-proj">PROJETO LEGAL QUE FAZ ISSO</a>
+                        <a href="visualizar-projeto-comprojeto.html" class="titulo-proj">PROJETO LEGAL QUE FAZ ISSO</a>
                         <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore atque voluptatum expedita id natus aliquid. Voluptates ratione quod aspernatur repellat, harum magnam ex recusandae deleniti rem distinctio commodi expedita cum?</p>
                         <p class="vagas">VAGAS: 5</p>
                     </div>
