--- a/buscar-projetos-semprojeto.html
+++ b/buscar-projetos-semprojeto.html
@@ -25,6 +25,7 @@
                     <div class="perfil">
                     <a href="#" class="selecionado">SEU PROJETO</a>
                     <ul>
+                        <li><a class="navitem" href="aluno-perfil-semprojeto.html">pagina inicial</a></li>
                         <li ><a class="navitem" href="#">Enviar relatório</a></li>
                         <li ><a class="navitem" href="#">Solicitar encerramento de vínculo</a></li>
                         <li ><a class="navitem" href="#">Ver historico</a></li>
