--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="index.html" class="selecionado">HOME</a>
                 <a href="cadastro.html">CADASTRO</a>
                 <a href="#">LOGIN</a>
-                <a href="#">SOBRE</a>
+                <a href="sobre.html">SOBRE</a>
             </div>
         </div>
     </header>
